--- a/css/scss/desktop.scss
+++ b/css/scss/desktop.scss
@@ -254,6 +254,12 @@ body.headbar-d {
       }
     }
   }
+  &.-job { 
+    .entry-title { 
+      min-height: 80px;
+      font-size: 30px;
+    }
+  }
 }
 
 
@@ -701,5 +707,56 @@ body.headbar-d {
       right: 55px;
       left: unset;
     }
+  }
+}
+
+
+
+/*
+       #  ####  #####  
+       # #    # #    # 
+       # #    # #####  
+       # #    # #    # 
+  #    # #    # #    # 
+   ####   ####  #####  
+*/
+.jobs-anchors { 
+  padding: 130px 0;
+  h3 { 
+    color: white;
+    font-size: 40px;
+    font-weight: 700;
+    margin-bottom: 0;
+  }
+  span { 
+    color: white;
+    font-size: 25px;
+  }
+  .jobs-anchors-wrapper { 
+    margin-top: 50px;
+    grid-gap: 25px 20px;
+  }
+}
+.anchor-section { 
+  padding: 120px 150px;
+  .s-container { 
+    max-width: 1200px;
+  }
+  .anchor-section-header { 
+    svg {
+      width: 50px; 
+      margin-right: 30px;
+    }
+    h3 { 
+      font-size: 50px;
+    }
+    p { 
+      margin-top: 40px;
+      font-size: 25px;
+      line-height: 1.1;
+    }
+  }
+  .s-grid { 
+    grid-gap: 30px 40px;
   }
 }
