--- a/css/scss/desktop.scss
+++ b/css/scss/desktop.scss
@@ -760,3 +760,48 @@ body.headbar-d {
     grid-gap: 30px 40px;
   }
 }
+
+
+
+.single-job {
+  .banner-bg { 
+    height: 380px;
+    .bg-image { 
+      height: 380px;
+    }
+    .overlay {
+      height: 380px;
+    }
+  }
+  .meta-info { 
+    padding: 45px;
+    top: -180px;
+    flex-direction: row;
+    .info-icon {
+      width: 80px; 
+      height: 80px;
+      margin-right: 30px;
+    }
+    .info-text {
+      h2 {
+        font-size: 50px;
+      }
+    }
+    .entry-cta { 
+      margin-top: 0px;
+      width: 195px;
+    }
+  }
+  // Content
+  .entry-content { 
+    top: -90px;
+    flex-direction: row;
+    padding-bottom: 0px;
+    .left { 
+      margin-right: 100px;
+    }
+    .right {
+      margin-top: 0px;
+    }
+  }
+}
