--- a/css/scss/desktop.scss
+++ b/css/scss/desktop.scss
@@ -71,7 +71,14 @@ body.headbar-d {
     flex-direction: column;
     text-align: center;
     border-left: 1px solid #F2F2F2;
-    
+    &:nth-child(6) { 
+      .sub-menu { 
+        .sub-menu { 
+          left: unset;
+          right: 100%;
+        }
+      }
+    }
     a {
       padding: 10px 25px;
       font-size: 20px;
@@ -837,6 +844,108 @@ body.headbar-d {
         h3, .address, .icon-list, .link { 
           color: white;
         }
+      }
+    }
+  }
+}
+
+
+/*
+   ####   ####  #      #    # ##### #  ####  #    # 
+  #      #    # #      #    #   #   # #    # ##   # 
+   ####  #    # #      #    #   #   # #    # # #  # 
+       # #    # #      #    #   #   # #    # #  # # 
+  #    # #    # #      #    #   #   # #    # #   ## 
+   ####   ####  ######  ####    #   #  ####  #    # 
+*/
+.template-solution-banner { 
+  height: 500px;
+  max-height: 500px;
+  .s-container { 
+    height: 500px;
+    max-width: 1300px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    .banner-title { 
+      font-size: 100px;
+      margin: 0;
+    }
+  }
+}
+
+.page-template-solution { 
+  .s-container.main-body { 
+    max-width: 100%;
+    padding-left: 0;
+    padding-right: 0;
+  }
+  .tabs-link { 
+    justify-content: flex-start;
+  }
+}
+
+.main-solution-desktop { 
+  display: flex;
+  .child-title-container.left {  
+    width: 40%;
+    padding-left: calc((50% - 650px) + 25px);
+    padding-top: 25px;
+    padding-bottom: 75px;
+    .page-template-title { 
+      padding: 2px 36px;
+      border-left: 2px solid var(--s-accent);
+      h2 { 
+        color: var(--s-accent);
+        font-size: 45px;
+        font-weight: 500;
+        line-height: 1.4;
+        text-transform: uppercase;
+      }
+    }
+    .child-title { 
+      padding-left: 36px;
+      margin-bottom: var(--s-space);
+      font-size: 30px;
+      font-weight: 500;
+      line-height: 1.3;
+      text-transform: uppercase;
+      color: #BDBDBD;
+      transition: var(--c-transition-hover);
+      cursor: pointer;
+      &.active {
+        color: var(--s-accent);
+      }
+    }
+  } 
+  .child-content-container.right { 
+    width: 60%;
+    position: relative;
+    background-color: #FAFAFA;
+    padding-top: 75px;
+    padding-bottom: 75px;
+    .child-content {
+      transition: opacity 0.5s ease-in-out;
+      opacity: 0;
+      width: 100%;
+      height: 0;
+      overflow-x: hidden;
+      &.active { 
+        height: 100%;
+        opacity: 1;
+      }
+      .alignfull {
+        margin-left: 0;
+        margin-right: 0;
+        max-width: 100%;
+        .kt-row-column-wrap { 
+          padding-left: 0;
+          padding-right: 0;
+        }
+      }
+      > .alignnone { 
+        padding-right: calc((90% - 650px) + 25px);
+        padding-left: 50px;
       }
     }
   }
