--- a/css/scss/mobile.scss
+++ b/css/scss/mobile.scss
@@ -2102,3 +2102,163 @@ body.category .content-item .cat-links {
     }
   }
 }
+
+/*
+   ####   ####  #      #    # ##### #  ####  #    # 
+  #      #    # #      #    #   #   # #    # ##   # 
+   ####  #    # #      #    #   #   # #    # # #  # 
+       # #    # #      #    #   #   # #    # #  # # 
+  #    # #    # #      #    #   #   # #    # #   ## 
+   ####   ####  ######  ####    #   #  ####  #    # 
+*/
+
+.template-solution-banner { 
+  height: 220px;
+  max-height: 220px;
+  position: relative;
+  overflow: hidden;
+  .banner-image { 
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+
+    img { 
+      width: 100%;
+      object-fit: cover;
+      object-position: top;
+      height: 100%;
+    }
+    video { 
+      object-fit: cover;
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      top: 0;
+      left: 0;
+      z-index: 0;
+    }
+  }
+  .banner-overlay { 
+    z-index: 1;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(180deg, rgba(0, 0, 0, 0.20) 0%, rgba(0, 0, 0, 0.00) 35%);
+    background-size: cover;
+    background-repeat: no-repeat;
+  }
+  .rank-math-breadcrumb { 
+    margin-top: 30px;
+    color: white;
+    a { 
+      color: white;
+    }
+  }
+  .s-container { 
+    height: 220px;
+    position: relative;
+    z-index: 2;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    .banner-title { 
+      color: #FFF;
+      font-size: 50px;
+      font-weight: 700;
+      line-height:  1.3;
+      text-transform: uppercase;
+      margin: 0 0 20px 0;
+    }
+  }
+}
+.page-template-solution { 
+  .tabs-link { 
+    display: flex;
+    justify-content: center;
+    margin-bottom: 50px;
+    margin-top: 50px;
+    .tab-link-item { 
+      padding: 5px 30px;
+      border: 1px solid var(--s-accent-hover);
+      border-radius: 50px;
+      color: #333;
+      font-size: 18px;
+      margin-right: 30px;
+      text-transform: uppercase;
+      &.active, &:hover { 
+        background-color: var(--s-accent-hover);
+        color: white;
+      }
+      &:last-child { 
+        margin-right: 0;
+      }
+    }
+  }
+  .file-btns { 
+    a:first-child { 
+      margin-left: 0;
+    }
+  }
+}
+
+.main-solution-mobile {  
+  .accordion-container { 
+    padding-bottom: 60px;
+    .accordion-trigger { 
+      cursor: pointer;
+      padding: 8px 25px;
+      width: 100%;
+      text-align: left;
+      border: none;
+      outline: none;
+      transition: 0.4s;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin: 10px 0;
+      &.active { 
+        svg {
+          transform: scaleY(-1);
+        }
+      }
+      .accordion-title  {
+        color: var(--Navy, #003955);
+        font-size: 30px;
+        font-weight: 700;
+        line-height: 1;
+        text-transform: uppercase;
+        margin: 0;
+      }
+    }
+    .accordion-content { 
+      background-color: #FAFAFA;
+      max-height: 0;
+      overflow: hidden;
+      transition: max-height 0.2s ease-out;
+      &.active { 
+        padding: 50px 18px 0;
+        .alignfull {
+          margin-left: 0;
+          max-width: 100%;
+          .kt-row-column-wrap { 
+            padding-left: 0;
+            padding-right: 0;
+          }
+        }
+        .image-scroll { 
+          margin-right: -25px;
+          overflow: scroll;
+          img { 
+            min-width: fit-content;
+          }
+        }
+      }
+    }
+  }
+}
