--- a/css/scss/desktop.scss
+++ b/css/scss/desktop.scss
@@ -989,3 +989,41 @@ body.headbar-d {
     padding-bottom: 0;
   }
 }
+
+/*
+   ####  #####  ####   ####  #    #    # #####  
+  #        #   #    # #    # #   #     # #    # 
+   ####    #   #    # #      ####      # #    # 
+       #   #   #    # #      #  #      # #####  
+  #    #   #   #    # #    # #   #     # #   #  
+   ####    #    ####   ####  #    #    # #    # 
+*/
+.stock-ir {
+  flex-direction: row;
+  padding-bottom: 0px;
+  .col { 
+    padding: 65px 40px 25px;
+    border-right: 1px solid #f2f2f2;
+    width: 23.333%;
+    text-align: left;
+    &:last-child { 
+      border-right: 0;
+    }
+    &.col-1 { 
+      padding-top: 25px;
+    }
+    &.col-2 {
+      width: 30%;
+      padding-bottom: 0;
+    }
+    &.col-3, &.col-4 {
+      display: block;
+      padding-top: 90px;
+    }
+    label { 
+      color: #828282;
+      font-size: 20px;
+      font-weight: 400;
+    }
+  }
+}
