--- a/css/scss/mobile.scss
+++ b/css/scss/mobile.scss
@@ -2372,3 +2372,68 @@ body.category .content-item .cat-links {
     }
   }
 }
+
+
+/*
+  # #####     #    #   ##   #    # 
+  # #    #    ##   #  #  #  #    # 
+  # #    #    # #  # #    # #    # 
+  # #####     #  # # ###### #    # 
+  # #   #     #   ## #    #  #  #  
+  # #    #    #    # #    #   ##   
+*/
+.template-navigation-mobile { 
+  position: relative;
+  display: inline-block;
+  width: 100%;
+  margin: 50px 0;
+  .dropbtn {
+    background-color: var(--s-accent);
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: white;
+    padding: 15px 30px;
+    font-size: 25px;
+    font-weight: 500;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    svg { 
+      color: var(--s-accent-hover);
+    }
+  }
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    width: 100%;
+    z-index: 11;
+    border-radius: 5px;
+    border: 1px solid #F2F2F2;
+    background-color: #FFF;
+    a {
+      display: block;
+      width: 100%;
+      border-bottom: 1px solid #F2F2F2;
+      padding: 15px 30px;
+      color:#828282;
+      font-size: 25px;
+      font-weight: 400;
+      line-height: normal;
+      &:last-child { 
+        border-bottom: none;
+      }
+    }
+  }
+  &.active{
+    .dropbtn {
+      svg { 
+        transform: scaleY(-1);
+      }
+    }
+    .dropdown-content {
+      display: block;
+    }
+  }
+}
