#24 IR all the documents

--- a/css/scss/desktop.scss
+++ b/css/scss/desktop.scss
@@ -1065,3 +1065,19 @@ body.headbar-d {
     }
   }
 }
+
+
+
+/*
+    ##   #    #   ##   #      #   #  ####  ##### 
+   #  #  ##   #  #  #  #       # #  #        #   
+  #    # # #  # #    # #        #    ####    #   
+  ###### #  # # ###### #        #        #   #   
+  #    # #   ## #    # #        #   #    #   #   
+  #    # #    # #    # ######   #    ####    #   
+*/
+.card-analyst { 
+  .grid-person  { 
+    grid-gap: 25px;
+  }
+}
