--- a/css/scss/desktop.scss
+++ b/css/scss/desktop.scss
@@ -1162,3 +1162,16 @@ body.headbar-d {
     }
   }
 }
+
+
+/*
+  #####   ##   #####  #      ###### 
+    #    #  #  #    # #      #      
+    #   #    # #####  #      #####  
+    #   ###### #    # #      #      
+    #   #    # #    # #      #      
+    #   #    # #####  ###### ###### 
+*/
+.financial-table-container { 
+  padding-right: 0;
+}
