--- a/css/scss/mobile.scss
+++ b/css/scss/mobile.scss
@@ -1617,6 +1617,34 @@ body.category .content-item .cat-links {
   .s-grid { 
     grid-gap: 0;
   }
+  &.-latest {
+    border: 0;
+    padding: 0px;
+    margin-top: 25px;
+    .s-grid {
+      border: none;
+      padding: 0;
+    }
+    .content-document { 
+      padding: 0;
+      margin-top: 25px;
+      .entry-title{
+        color: var(--s-accent);
+        font-size: 25px;
+        font-weight: 700;
+      }
+      .file-btns {
+        justify-content: flex-start;
+        .button{
+          margin: 0 10px;
+          &:first-child { 
+            margin-left: 0;
+            padding-left: 0;
+          }
+        }
+      }
+    }
+  }
 }
 
 .document-container-cover { 
@@ -2738,6 +2766,11 @@ body.category .content-item .cat-links {
    ####  #    # #    # #    #   #   
 */
 .chart-container  {
+  &.-investor { 
+    .chart-wrapper { 
+      padding: 0;
+    }
+  }
   .chart-header { 
     display: flex;
     justify-content: space-between;
@@ -2845,6 +2878,112 @@ body.category .content-item .cat-links {
            color: white;
           }
         }
+      }
+    }
+  }
+}
+
+.ir-news-container {
+  .s-grid { 
+    grid-gap: 60px;
+  }
+}
+.ir-news-card { 
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  min-height: auto;
+  position: relative;
+  &:first-child { 
+    &::after { 
+      content: '';
+      height: 1px;
+      width: 100%;
+      background-color: #F2F2F2;
+      position: absolute;
+      bottom: -30px;
+      left: 0;
+    }
+  }
+  &:hover { 
+    .entry-link { 
+      color: var(--s-accent-hover);
+    }
+  }
+  .entry-header { 
+    color: #828282;
+    font-size: 16px;
+    font-weight: 500;
+    .separator {
+      margin: 0 10px;
+    }
+    .entry-title { 
+      margin-top: 10px;
+      color: #333;
+      font-size: 22px;
+      font-weight: 500;
+      line-height: 1.3;
+    }
+  }
+  .entry-link { 
+    color: #828282;
+    font-size: 18px;
+    font-weight: 400;
+    transition: var(--s-accent-hover);
+    svg { 
+      color: var(--s-accent-hover);
+      margin-left: 10px;
+    }
+  }
+}
+
+.webcast-highlight { 
+  .nav { 
+    display: none;
+  }
+  .webcast-highlight-card {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    h3 { 
+      color: white;
+      font-size: 20px;
+      font-weight: 400;
+      line-height: 1.2;
+      margin-bottom: var(--s-space);
+      margin-right: 0;
+      text-align: center;
+    }
+    .entry-link { 
+      color: #FFF;
+      font-size: 18px;
+      font-weight: 400;
+      min-width: 90px;
+      text-align: center;
+      svg { 
+        color: var(--s-accent-hover);
+        margin-left: 10px;
+      }
+    }
+    &:hover { 
+      .entry-link { 
+        color: var(--s-accent-hover);
+      }
+    }
+  }
+  .dots { 
+    bottom: -20px;
+    .dot { 
+      width: 5px;
+      height: 5px;
+      background-color: transparent;
+      border: 1px solid white;
+      &.active { 
+        width: 5px;
+        height: 5px;
+        background-color: white;
       }
     }
   }
