--- a/css/scss/desktop.scss
+++ b/css/scss/desktop.scss
@@ -257,6 +257,7 @@ body.headbar-d {
     }
     .entry-summary {
       p { 
+        font-size: 20px;
         -webkit-line-clamp: 6;
       }
     }
@@ -421,6 +422,9 @@ body.headbar-d {
     padding-right: 50px;
     .ss-item { 
       font-size: 35px;
+      &.active { 
+        color: var(--s-accent-hover);
+      }
     }
   }
   .ss-right { 
@@ -522,7 +526,6 @@ body.headbar-d {
     text-align: left;
     h4 { 
       margin-bottom: 0;
-      font-size: 30px;
       color: #333;
     }
   }
@@ -692,6 +695,12 @@ body.headbar-d {
   }
 }
 
+
+.document-container-cover { 
+  .s-grid {
+    grid-gap: 65px 20px;
+  } 
+}
 /*
   #    # ###### #    #  ####  
   ##   # #      #    # #      
@@ -848,6 +857,9 @@ body.headbar-d {
   min-height: 420px;
   .info { 
     padding: 45px;
+    h3 { 
+      min-height: 55px;
+    }
   }
   &.-large { 
     flex-direction: row;
@@ -858,6 +870,8 @@ body.headbar-d {
     .info { 
       width: 40%;
       padding: 50px 40px;
+      border: 1px solid #f2f2f2;
+      border-radius: 5px 0 0 5px;
     }
     &:hover { 
       background-color: var(--s-accent);
@@ -941,6 +955,7 @@ body.headbar-d {
       text-transform: uppercase;
       color: #BDBDBD;
       transition: var(--c-transition-hover);
+      width: fit-content;
       cursor: pointer;
       &.active {
         color: var(--s-accent);
@@ -1045,6 +1060,9 @@ body.headbar-d {
       color: #828282;
       font-size: 20px;
       font-weight: 400;
+      &.date { 
+        color: inherit;
+      }
     }
   }
 }
@@ -1143,7 +1161,7 @@ body.headbar-d {
         margin-top: 0;
         font-size: 50px;
       }
-      .position { 
+      .position, .position > * { 
         font-size: 35px;
       }
     }
@@ -1151,15 +1169,23 @@ body.headbar-d {
 }
 .modal-board {
   .board-container { 
+    max-height: 550px;
     max-width: 1080px;
     width: 1080px;
     flex-direction: row;
     .pic { 
       min-width: 400px;
       width: 400px;
+      img { 
+        max-height: unset;
+        width: 100%;
+        object-fit: cover;
+        height: 100%;
+      }
     }
     .info { 
       padding: 45px 40px 20px;
+      overflow: scroll;
       h2 { 
         font-size: 50px;
       }
@@ -1184,6 +1210,7 @@ body.headbar-d {
 */
 .financial-table-container { 
   padding-right: 0;
+  overflow-x: hidden;
 }
 
 
@@ -1230,7 +1257,7 @@ body.headbar-d {
   #      #    #  ####  #####   ####   ####    #   
 */
 .featured-product {
-  min-height: 650px;
+  min-height: 680px;
   padding: 50px 35px;
   .featured-subproduct { 
     margin-top: var(--s-space);
@@ -1256,11 +1283,31 @@ body.headbar-d {
         font-weight: 400;
       }
     }
+    .animated { 
+      .lottie-animated { 
+        width: 480px;
+      }
+    }
   }
   &.-flat { 
     padding-left: calc((100% - 441.666667px) +  25px);
   }
-
+  &.-hot { 
+    .animated { 
+      .animated-bg {
+        padding-bottom: 80px;
+      }
+    }
+  }
+  .animated { 
+    max-width: 480px;
+    .animated-bg {
+      padding-bottom: 25px;
+      img {
+        width: 400px;
+      }
+    }
+  }
   &:hover { 
     background-color: var(--s-accent);
     .featured-product-title {
@@ -1279,6 +1326,7 @@ body.headbar-d {
 
 
 .relate-products { 
+  margin-bottom: 0;
   .relate-item { 
     min-height: 388px;
     padding-left:  100px;
@@ -1314,6 +1362,35 @@ body.headbar-d {
         .lottie-animated { 
           opacity: 1;
         }
+      }
+    }
+  }
+}
+
+.hover-zoom-in { 
+  overflow: hidden;
+  border-radius: 5px;
+  img { 
+    transition: var(--c-transition-hover);
+  }
+  &:hover {
+    img { 
+      transform: scale(1.1);
+    }
+  }
+}
+
+.single { 
+  .site-content { 
+    .s-container { 
+      max-width: 1300px;
+    }
+  }
+  .content-single { 
+    .pic { 
+      img { 
+        max-height: 680px;
+        object-fit: cover;
       }
     }
   }
