--- a/css/scss/mobile.scss
+++ b/css/scss/mobile.scss
@@ -192,7 +192,7 @@
         &:first-child { 
           padding-top: 20px;
           .plus { 
-            top: 35px;
+            top: 20px;
           }
         }
         &:last-child {
@@ -204,6 +204,7 @@
         padding: 5px 10px 5px 38px;
         font-size: 22px;
         font-weight: 400;
+        width: 85%;
       }
       ul { 
         background-color: #002A3F;
@@ -274,7 +275,9 @@
       transition: max-height 0.5s, opacity 0.3s;
       .plus { 
         right: 37px;
-        top: 15px;
+        top: 0;
+        height: 45px;
+        width: 15%;
       }
       li.active{
         .sub-menu { 
@@ -309,10 +312,10 @@
     .plus {
       cursor: pointer;
       position: absolute;
-      top: 22px;
       right: 25px;
-      width: 12px;
-      height: 12px;
+      height: 60px;
+      width: 20%;
+      top: 0;
       b { 
         display: block;
         -webkit-transition: top 0.3s 0.15s, left 0.1s, background-color 0.1s, -webkit-transform 0.2s;
@@ -407,7 +410,8 @@
       }
     }
     .title { 
-      padding-top: 10px;
+      // padding-top: 10px;
+      padding-top: 20px;
       line-height: 1.05;
     }
   }
@@ -658,7 +662,7 @@
       p { 
         margin: 0;
         color: #4F4F4F;
-        font-size: 20px;
+        font-size: 22px;
         line-height: normal;
         display: -webkit-box;
         -webkit-line-clamp: 5;
@@ -889,6 +893,7 @@ body.category .content-item .cat-links {
     img { 
       width: 100%;
       border-radius: 5px;
+      max-height: 200px;
     }
   }
   .entry-title { 
@@ -1115,9 +1120,6 @@ body.category .content-item .cat-links {
       &:last-child { 
         border-bottom: none;
       }
-      &.active { 
-        color: var(--s-accent-hover);
-      }
     }
   }
   .ss-right { 
@@ -1213,19 +1215,25 @@ body.category .content-item .cat-links {
     flex-direction: column;
     background-color: var(--s-accent);
     min-height: 130px;
-    transition: var(--c-transition-hover);
     svg { 
       color: white;
       margin-bottom: 5px;
       width: 35px;
+      transition: var(--c-transition-hover);
     }
     .quick-menu-title { 
       color: white;
       font-size: 18px;
       font-weight: 500;
+      transition: var(--c-transition-hover);
     }
     &:hover { 
-      background-color: var(--s-accent-hover);
+      svg { 
+        color: var(--s-accent-hover);
+      }
+      .quick-menu-title { 
+        color: var(--s-accent-hover);
+      }
     }
   }
 }
@@ -1276,7 +1284,7 @@ body.category .content-item .cat-links {
     }
   }
   .divider-vertical { 
-    background-color: #E0E0E0;
+    background-color: #F2F2F2;
     height: 27px;
     width: 1px;
   }
@@ -1302,7 +1310,8 @@ body.category .content-item .cat-links {
     flex-wrap: wrap;
     text-align: center;
     h4 { 
-      font-size: 25px;
+      // font-size: 25px;
+      font-size: 30px;
       font-weight: 700;
       margin-bottom: 10px;
     }
@@ -1650,10 +1659,10 @@ body.category .content-item .cat-links {
 .document-container-cover { 
   margin-top: 40px;
   .s-grid {
-    grid-gap: 65px 20px;
+    grid-gap: 40px 20px;
   }
   .pic {
-    padding: 45px 55px;
+    padding: 38px 55px;
     background-color: #F2F2F2;
     img { 
       box-shadow: 5px 5px 20px 0px rgba(0, 0, 0, 0.05);
@@ -2264,6 +2273,9 @@ body.category .content-item .cat-links {
       font-size: 18px;
       margin-right: 30px;
       text-transform: uppercase;
+      @media only screen and (max-width: 405px) {
+        margin-right: 10px;
+      }
       &.active, &:hover { 
         background-color: var(--s-accent-hover);
         color: white;
@@ -2318,6 +2330,7 @@ body.category .content-item .cat-links {
         line-height: 1;
         text-transform: uppercase;
         margin: 0;
+        margin-right: var(--s-space);
       }
     }
     .accordion-content { 
@@ -2360,6 +2373,7 @@ body.category .content-item .cat-links {
     line-height: 1;
     padding-left: 25px;
     padding-bottom: 50px;
+    display: block;
     &:hover { 
       color: var(--s-accent-hover);
     }
@@ -2422,6 +2436,10 @@ body.category .content-item .cat-links {
       font-weight: 500;
       line-height: normal;
       margin: 0;
+      &.date { 
+        color: #828282;
+        font-size:20px;
+      }
     }
     h4 { 
       color: var(--s-accent);
@@ -2700,6 +2718,8 @@ body.category .content-item .cat-links {
       min-width: 100%;
       width: 100%;
       img { 
+        max-height: 500px;
+        width: 100%;
         object-fit: cover;
         height: 100%;
       }
@@ -2792,7 +2812,7 @@ body.category .content-item .cat-links {
     }
   }
   .chart-wrapper { 
-    padding: 15px 30px;
+    padding: 10px 30px;
   }
   .chart-legend { 
     text-align: center;
@@ -3080,7 +3100,7 @@ body.category .content-item .cat-links {
       position: absolute;
       right: 0;
       bottom: 50px;
-      width: 400px;
+      width: 300px;
     }
     .animated { 
       .lottie-animated { 
